# envhackathon-round-one

./: .gitignore  Dockerfile  README.md  baseline.py  inference.py  inference_results.json  openenv.yaml  pyproject.toml  requirements.txt
app/: __init__.py  environment.py  main.py  models.py
app/tasks/: __init__.py  base.py  task1.py  task2.py  task3.py
server/: app.py
