[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sre-incident-env"
version = "1.0.0"
description = "SRE Incident Response OpenEnv Environment"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.3",
    "httpx==0.28.1",
    "python-multipart==0.0.19",
    "pyyaml==6.0.2",
]
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
baseline = "baseline:main"
inference = "inference:main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.package-data]
app = ["tasks/*.py"]